DDF-1648 - updated poms for platform-util dependency

--- a/catalog/content/core/content-core-catalogerplugin/pom.xml
+++ b/catalog/content/core/content-core-catalogerplugin/pom.xml
@@ -96,7 +96,8 @@
                             ddf.catalog.data.impl,
                             ddf.catalog.resource.impl,
                             ddf.catalog.operation.impl,
-                            ddf.catalog.util.impl
+                            ddf.catalog.util.impl,
+                            org.codice.ddf.platform.util
                         </Private-Package>
                         <Export-Package>
                             ddf.content.plugin.cataloger;version=${project.version}
