--- a/platform/security/filter/security-filter-authorization/pom.xml
+++ b/platform/security/filter/security-filter-authorization/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>ddf-security-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -79,7 +83,7 @@
                         <Export-Package>
                             org.codice.ddf.security.filter.authorization
                         </Export-Package>
-                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common</Embed-Dependency>
+                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common,platform-util</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
