--- a/platform/security/handler/security-handler-saml/pom.xml
+++ b/platform/security/handler/security-handler-saml/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>platform-util-unavailableurls</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -93,7 +97,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
-                            ddf-security-common,httpclient,httpcore,platform-util-unavailableurls
+                            ddf-security-common,httpclient,httpcore,platform-util-unavailableurls,platform-util
                         </Embed-Dependency>
                         <Import-Package>
                             org.apache.cxf.common.util,
