--- a/platform/security/sts/security-sts-realm/pom.xml
+++ b/platform/security/sts/security-sts-realm/pom.xml
@@ -94,6 +94,10 @@
             <artifactId>platform-util-unavailableurls</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -109,7 +113,7 @@
                             *
                         </Import-Package>
                         <Embed-Dependency>
-                            httpclient,httpcore,platform-util-unavailableurls,ddf-security-common
+                            httpclient,httpcore,platform-util-unavailableurls,ddf-security-common,platform-util
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
