--- a/platform/admin/admin-app/pom.xml
+++ b/platform/admin/admin-app/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <name>DDF :: Admin :: App</name>
     <artifactId>admin-app</artifactId>
-    <packaging>pom</packaging>
+    <packaging>kar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -48,12 +48,12 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
-                <artifactId>features-maven-plugin</artifactId>
+                <artifactId>karaf-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>create-kar</id>
+                        <id>kar</id>
                         <goals>
-                            <goal>create-kar</goal>
+                            <goal>kar</goal>
                         </goals>
                         <configuration>
                             <!-- Workaround to prevent features.xml file from being included twice in the kar file. -->
