--- a/platform/security/interceptor/security-interceptor-guest/pom.xml
+++ b/platform/security/interceptor/security-interceptor-guest/pom.xml
@@ -79,6 +79,10 @@
             <groupId>ddf.security</groupId>
             <artifactId>ddf-security-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -88,7 +92,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common</Embed-Dependency>
+                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common,platform-util</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
