--- a/platform/security/sts/security-sts-server/pom.xml
+++ b/platform/security/sts/security-sts-server/pom.xml
@@ -101,6 +101,10 @@
             <artifactId>ddf-security-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -118,7 +122,8 @@
                             common-system,
                             httpclient,httpcore,
                             platform-util-unavailableurls,
-                            ddf-security-common
+                            ddf-security-common,
+                            platform-util
                         </Embed-Dependency>
                         <Import-Package>
                             javax.net.ssl,
