--- a/platform/security/sts/security-sts-usernametokenvalidator/pom.xml
+++ b/platform/security/sts/security-sts-usernametokenvalidator/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>platform-parser-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -86,7 +90,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common</Embed-Dependency>
+                        <Embed-Dependency>httpclient,httpcore,platform-util-unavailableurls,ddf-security-common,platform-util</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
