--- a/platform/security/idp/security-idp-server/pom.xml
+++ b/platform/security/idp/security-idp-server/pom.xml
@@ -184,6 +184,10 @@
             <version>2.4.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -222,7 +226,9 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
                             boon,
-                            ddf-security-common,platform-util-unavailableurls,
+                            ddf-security-common,
+                            platform-util-unavailableurls,
+                            platform-util,
                             antlr4-runtime,
                             commons-lang3,
                             common-system
