--- a/distribution/sdk/sample-plugins/pom.xml
+++ b/distribution/sdk/sample-plugins/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>filter-proxy</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -50,7 +55,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
-                            catalog-core-api-impl;scope=!test
+                            catalog-core-api-impl;scope=!test,platform-util
                         </Embed-Dependency>
                         <Import-Package>
                             ddf.catalog,
