--- a/distribution/sdk/sdk-app/pom.xml
+++ b/distribution/sdk/sdk-app/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     <artifactId>sdk-app</artifactId>
     <name>DDF :: SDK :: App</name>
-    <packaging>pom</packaging>
+    <packaging>kar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -47,12 +47,12 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
-                <artifactId>features-maven-plugin</artifactId>
+                <artifactId>karaf-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>create-kar</id>
+                        <id>kar</id>
                         <goals>
-                            <goal>create-kar</goal>
+                            <goal>kar</goal>
                         </goals>
                         <configuration>
                             <!-- Workaround to prevent features.xml file from being included twice in the kar file. -->
