--- a/distribution/test/itests/pom.xml
+++ b/distribution/test/itests/pom.xml
@@ -28,7 +28,9 @@
         <module>test-itests-ddf</module>
     </modules>
     <properties>
-        <pax.exam.version>4.4.0</pax.exam.version>
+        <pax.exam.version>4.8.0</pax.exam.version>
+        <pax.tinybundles.version>2.1.1</pax.tinybundles.version>
+        <pax.url.version>2.4.5</pax.url.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -45,7 +47,7 @@
             <dependency>
                 <groupId>org.ops4j.pax.tinybundles</groupId>
                 <artifactId>tinybundles</artifactId>
-                <version>2.1.0</version>
+                <version>${pax.tinybundles.version}</version>
             </dependency>
             <!-- Start of dependencies for pax exam karaf container -->
             <dependency>
@@ -66,7 +68,7 @@
             <dependency>
                 <groupId>org.ops4j.pax.url</groupId>
                 <artifactId>pax-url-aether</artifactId>
-                <version>2.2.0</version>
+                <version>${pax.url.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.inject</groupId>
