DDF-1648 - updated ApplicationServiceImpl to not AutoRefreshBundles when installing new features

--- a/platform/admin/admin-app/pom.xml
+++ b/platform/admin/admin-app/pom.xml
@@ -140,5 +140,20 @@
             <artifactId>admin-modules-application</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.admin.modules</groupId>
+            <artifactId>admin-metrics-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.admin.modules</groupId>
+            <artifactId>admin-security-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.admin.modules</groupId>
+            <artifactId>admin-security-certificate-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
