DDF-1648 - removed race condition between catalog & security booting at the same time

--- a/platform/admin/modules/admin-security-ui/pom.xml
+++ b/platform/admin/modules/admin-security-ui/pom.xml
@@ -90,7 +90,7 @@
                 <configuration>
                     <instructions>
                         <Web-ContextPath>/security-config</Web-ContextPath>
-                        <_wab>src/main/webapp,${project.build.directory}/webapp</_wab>
+                        <_wab>src/main/webapp</_wab>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
                             platform-error-servlet
