--- a/platform/admin/modules/pom.xml
+++ b/platform/admin/modules/pom.xml
@@ -27,8 +27,8 @@
         <module>admin-modules-installer</module>
         <module>admin-modules-configuration</module>
         <module>admin-modules-application</module>
-        <module>platform-metrics-ui</module>
-        <module>security-admin-module</module>
-        <module>security-certificate-adminmodule</module>
+        <module>admin-metrics-ui</module>
+        <module>admin-security-ui</module>
+        <module>admin-security-certificate-ui</module>
     </modules>
 </project>
