--- a/catalog/catalog-app/pom.xml
+++ b/catalog/catalog-app/pom.xml
@@ -22,7 +22,7 @@
         <version>2.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>catalog-app</artifactId>
-    <packaging>kar</packaging>
+    <packaging>pom</packaging>
     <name>DDF :: Catalog App</name>
     <build>
         <plugins>
