--- a/catalog/schematron/catalog-schematron-plugin/pom.xml
+++ b/catalog/schematron/catalog-schematron-plugin/pom.xml
@@ -45,6 +45,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -60,7 +64,8 @@
                         <Embed-Dependency>
                             catalog-core-api-impl;scope=!test,
                             commons-io,
-                            Saxon-HE
+                            Saxon-HE,
+                            platform-util
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
