--- a/catalog/spatial/spatial-app/pom.xml
+++ b/catalog/spatial/spatial-app/pom.xml
@@ -21,7 +21,7 @@
         <version>2.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>spatial-app</artifactId>
-    <packaging>kar</packaging>
+    <packaging>pom</packaging>
     <name>DDF :: Spatial App</name>
     <build>
         <plugins>
