--- a/platform/admin/admin-app/pom.xml
+++ b/platform/admin/admin-app/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <name>DDF :: Admin :: App</name>
     <artifactId>admin-app</artifactId>
-    <packaging>kar</packaging>
+    <packaging>pom</packaging>
     <build>
         <plugins>
             <plugin>
