--- a/platform/persistence/platform-persistence-core-impl/pom.xml
+++ b/platform/persistence/platform-persistence-core-impl/pom.xml
@@ -188,6 +188,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -232,6 +233,8 @@
                             org.codice.ddf.persistence.internal
                         </Private-Package>
                         <Import-Package>
+                            !org.eclipse.jetty.server.bio,
+                            !org.eclipse.jetty.server.ssl,
                             com.google.*,
                             com.vividsolutions.jts.geom,
                             com.vividsolutions.jts.io,
@@ -254,8 +257,8 @@
                             javax.security.auth.spi,
                             javax.security.auth.x500,
                             javax.security.sasl,
-                            javax.servlet,
-                            javax.servlet.http,
+                            javax.servlet;version="[3.1,4)",
+                            javax.servlet.http;version="[3.1,4)",
                             javax.xml.bind,
                             javax.xml.namespace,
                             javax.xml.parsers,
