DDF-1648 - updated serviceRequirements=disable to turn off autoRresh bundles

--- a/distribution/ddf-common/src/main/resources/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources/etc/custom.properties
@@ -188,7 +188,9 @@ org.osgi.framework.system.packages.extra = \
     org.apache.karaf.jaas.boot.principal;uses:=javax.security.auth;version=4.0.4, \
     com.sun.crypto.provider, \
     com.sun.net.ssl, \
-    com.sun.net.ssl.internal.ssl
+    com.sun.net.ssl.internal.ssl, \
+    com.sun.security.auth.callback, \
+    com.sun.security.auth.module
 
 #  sun.misc, \
 #  sun.net.util, \
