--- a/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -36,3 +36,20 @@ mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features
 featuresBoot=\
 kernel,\
 kernel-webconsolebranding
+
+#
+# Defines if the boot features are started in asynchronous mode (in a dedicated thread)
+#
+featuresBootAsynchronous=false
+
+# Service requirements enforcement
+#
+# By default, the feature resolver checks the service requirements/capabilities of
+# bundles for new features (xml schema >= 1.3.0) in order to automatically installs
+# the required bundles.
+# The following flag can have those values:
+#   - disable: service requirements are completely ignored - disables auto refresh bundles
+#   - default: service requirements are ignored for old features
+#   - enforce: service requirements are always verified
+#
+serviceRequirements=disable
