DDF-2467 Support Solr Cloud

--- a/catalog/solr/pom.xml
+++ b/catalog/solr/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>catalog-solr-embedded-provider</module>
         <module>catalog-solr-external-provider</module>
+        <module>catalog-solr-cloud-provider</module>
         <module>solr-app</module>
     </modules>
 </project>
