--- a/catalog/solr/catalog-solr-cloud-provider/pom.xml
+++ b/catalog/solr/catalog-solr-cloud-provider/pom.xml
@@ -21,11 +21,11 @@
         <groupId>ddf.catalog.solr</groupId>
         <version>2.10.0-SNAPSHOT</version>
     </parent>
-    <groupId>ddf.catalog.solr.external</groupId>
-    <artifactId>catalog-solr-external-provider</artifactId>
-    <name>DDF :: Catalog :: Solr :: External :: Provider</name>
+    <groupId>ddf.catalog.solr.cloud</groupId>
+    <artifactId>catalog-solr-cloud-provider</artifactId>
+    <name>DDF :: Catalog :: Solr :: Cloud :: Provider</name>
     <packaging>bundle</packaging>
-    <description>Catalog Provider that connects to an external (HTTP) Solr Server</description>
+    <description>Catalog Provider that connects to a Solr Cloud</description>
     <dependencies>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
@@ -117,6 +117,7 @@
                             javax.xml.transform.stream,
                             javax.xml.xpath,
                             org.apache.commons.logging;version="[1.1,2)",
+                            org.ietf.jgss,
                             org.opengis.filter,
                             org.opengis.filter.expression,
                             org.opengis.filter.sort,
